--- a/resources/css/admin.css
+++ b/resources/css/admin.css
@@ -1,3 +1,12 @@
+body{
+  height: 100%;
+  background: #F58220;  
+}
+
+.panel.panel-default{
+  border: none !important;
+  box-shadow: 1px 1px 10px 1px;
+}
 .vertical-offset-100{
     padding-top:15%;
 }
