--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -79,32 +79,6 @@ html, body {
     margin-right: 0px;
     font-size: 21px;
 }
-.pan-menu {
-    background-color: #f47f20;
-}
-.pan-menu ul {
-    display: block;
-    background-color: #f47f20;
-    padding: 0px;
-}
-.pan-menu ul li {
-    display: block;
-    list-style: none;
-    height: 36px;
-    width: 14.2%;
-    background-color: #f47f20;
-    float: left;
-    line-height: 36px;
-    text-align: center;
-    font-weight: bold;
-}
-.pan-menu ul li:hover {
-    background-color: orange;
-}
-.pan-menu ul li a, .pan-menu ul li a:active, .pan-menu ul li a:visited, .pan-menu ul li a:hover {
-    text-decoration: none;
-    color: #ffffff;
-}
 
 .pan-footer {
     position: relative;
@@ -133,6 +107,7 @@ html, body {
 .pan-body {
     min-height: 400px;
     position: relative;
+    overflow: hidden;
 }
 
 .font-custom {
@@ -169,7 +144,8 @@ html, body {
     }
 
     .pan-footer {
-        height: 280px;
+        /*height: 280px;*/
+        height: 100%;
     }
     .pan-footer img {
         position: relative;
@@ -180,6 +156,284 @@ html, body {
         border-radius: 10px;
     }
 }
+
+.fpt-menu-top{
+    padding: 0px !important;
+    background-color: #f47f20;
+}
+
+.fpt-menu-top .navbar{
+    margin-bottom: 0px !important;
+    border: 0px !important;
+    border-radius: 0px;
+}
+
+.fpt-menu-top .navbar-default .navbar-collapse{
+    background-color: #f47f20 !important;
+}
+
+.fpt-menu-top .navbar-default .navbar-nav>li{
+    background-color: #f47f20;
+    text-align: center;
+    font-weight: bold;
+}
+.fpt-menu-top .navbar-default .navbar-nav>li:hover {
+    background-color: orange;
+}
+.fpt-menu-top .navbar-default .navbar-nav>li>a{
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.fpt-menu-top .navbar-default .navbar-toggle{
+    border-color: transparent !important; 
+}
+
+.fpt-menu-top .navbar-default .navbar-toggle:hover{
+   background-color: transparent !important; 
+}
+
+.fpt-menu-top .navbar-default .navbar-toggle.icon-orange .glyphicon  {
+  color: #f47f20;
+}
+
+.fpt-menu-top .navbar-default .navbar-toggle.icon-blue .glyphicon  {
+    color: #0A4CAA;
+}
+
+.fpt-menu-top .navbar-default .navbar-toggle.icon-green .glyphicon  {
+    color: #4CB645;
+}
+
+.fpt-menu-top .btn-navbar-collapse-top  {
+    margin-right: 40%;
+}
+
+@media screen and (max-width: 500px) {
+    .fpt-menu-top .btn-navbar-collapse-top  {
+        margin-right: 35%;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .fpt-menu-top .btn-navbar-collapse-top  {
+        margin-right: 30%;
+    }
+}
+.fpt-menu-top .btn-navbar-collapse-right  {
+    float: right;  
+}   
+
+
+.fpt-menu-top .btn-navbar-collapse-left  {
+    float: left;
+}
+
+
+ 
+/*menu left*/
+/*
+
+#wrapper {
+    padding-left: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#wrapper.toggled {
+    padding-left: 250px;
+}
+
+#sidebar-wrapper {
+    z-index: 1000;
+    left: 250px;
+    width: 0;
+    height: 100%;
+    margin-left: -250px;
+    overflow-y: auto;
+    background: #000;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    width: 250px;
+}
+
+#page-content-wrapper {
+    width: 100%;
+    position: absolute;
+    padding: 15px;
+}
+
+#wrapper.toggled #page-content-wrapper {
+    position: absolute;
+    margin-right: -250px;
+}
+
+
+.sidebar-nav {
+    position: absolute;
+    top: 0;
+    width: 250px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.sidebar-nav li {
+    text-indent: 20px;
+    line-height: 40px;
+}
+
+.sidebar-nav li a {
+    display: block;
+    text-decoration: none;
+    color: #999999;
+}
+
+.sidebar-nav li a:hover {
+    text-decoration: none;
+    color: #fff;
+    background: rgba(255,255,255,0.2);
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+    text-decoration: none;
+}
+
+.sidebar-nav > .sidebar-brand {
+    height: 65px;
+    font-size: 18px;
+    line-height: 60px;
+}
+
+.sidebar-nav > .sidebar-brand a {
+    color: #999999;
+}
+
+.sidebar-nav > .sidebar-brand a:hover {
+    color: #fff;
+    background: none;
+}
+
+@media(min-width:768px) {
+    #wrapper {
+        padding-left: 250px;
+    }
+
+    #wrapper.toggled {
+        padding-left: 0;
+    }
+
+    #sidebar-wrapper {
+        width: 250px;
+    }
+
+    #wrapper.toggled #sidebar-wrapper {
+        width: 0;
+    }
+
+    #page-content-wrapper {
+        padding: 20px;
+        position: relative;
+    }
+
+    #wrapper.toggled #page-content-wrapper {
+        position: relative;
+        margin-right: 0;
+    }
+}
+
+*/
+
+
+.float-left{
+    float: left;
+}
+
+.float-right{
+    float: right;
+}
+
+.clear{
+    clear: both;
+}
+
+.container.pan-body{
+    padding: 0px !important;
+    /*margin: 0px !important;*/
+}
+
+.navbar-menu-left, .navbar-menu-left>ul{
+    padding: 0px !important;
+    margin: 0px !important;
+}
+/*.navbar-menu-ri>ul>li>a{
+    margin-left: 20px;
+}*/
+.navbar-menu-right, .navbar-menu-right>ul{
+    padding: 0px !important;
+    margin: 0px !important;
+}
+
+/*.navbar-menu-right>ul>li>a{
+
+}*/
+
+.navbar-menu-left .mn-parent, .navbar-menu-right .mn-parent{
+    background-color: #f47f20;    
+}
+
+.navbar-menu-left .mn-parent a:hover,
+.navbar-menu-right .mn-parent a:hover{
+    background: none !important;    
+}
+
+.navbar-menu-left li a{
+    color: #9c9c9c;  
+}
+
+.navbar-menu-left li a:hover,
+.navbar-menu-right li a:hover{
+    background: orange !important;  
+    color: #FFFFFF;  
+}
+
+.navbar-menu-left .mn-parent a, .navbar-menu-right .mn-parent a {
+    color: #FFFFFF;
+    font-weight: bold;
+}
+
+.navbar-menu-left ul>li{
+    border-bottom: 1px solid #ddd;
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    max-width: 200px;
+}
+
+.navbar-menu-left ul>li a span.glyphicon{
+    float: right;
+    font-size: 10px;
+    margin-left: 5px;
+    line-height: 17px;
+}
+.navbar-menu-right ul>li{
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    max-width: 200px;
+}
+
+
+.navbar-menu-right ul>li.mn-child{
+    border-bottom: 1px solid #ddd;
+}
+
 @media screen and (max-width: 767px) {
     .pan-top {
         background-image: none;
@@ -193,4 +447,39 @@ html, body {
         margin-top: 0px;
         margin-bottom: 10px;
     }
+    .navbar-menu-left ul>li, .navbar-menu-right ul>li{
+        max-width: 100%;
+    }
 }
+
+.home-page-content{
+    padding-right: 0px !important; 
+    position: static;      
+    margin-left: -5px !important;  
+}
+
+.home-page-content .ftp-content{
+    border: 1px solid #ddd;
+    padding: 0px; 
+     /*background: orange;       */
+}
+
+.detail-page-content{
+    
+    position: static;
+    margin-left: -5px;    
+}
+
+.detail-page-content .ftp-content{
+    border: 1px solid #ddd;
+    padding-left: 5px;  
+}
+
+.no-margin{
+    margin: 0px !important;
+}
+
+.no-padding{
+    padding: 0px !important;
+}
+
