home page success

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -14,7 +14,7 @@ html, body {
 }
 .loading {
     background-color: #ffffff;
-    background-image: url("../images/loading.gif");
+    background-image: url("../images/ajax-loader.gif");
     background-repeat: no-repeat;
     background-position: 49%;
     width: 100%;
